Style adjustments. Followed some material design suggestions per https://www.material.io/design/color/dark-theme.html#custom-application. Reduced primary (blue) and secondary (green) colors to accent areas instead of taking up large portions of the screen. Used rgba opacities to create a layered effect going from base background, stacking on container, inner, card, headings, paragraph and other text and buttons. Adjusted the hover/active/focus states of the nav links. Ensured consistent coloring of icons and like semantic elements between pages. Desaturated all colors. Ensured good contrast between text and background for both light and dark themes.

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -6,16 +6,28 @@
 
 .card.home__actions {
   display: flex;
+  margin: 0;
+  margin-bottom: 0.15rem;
   flex-direction: row;
-  /* border-radius: 5px; */
   justify-content: space-between;
-  /* align-items: center; */
-  height: calc((100vh - 150px) / 6);
-  transition: all 0.3s ease;
+  transition: scale 0.3s ease;
+  background: var(--backgroundLayerThree);
+}
+
+.card.home__actions > div {
+  height: calc((100vh - 150px) / 7);
+  width: 10rem;
+  border-right: 1px solid var(--backgroundLayerThree);
+  margin-right: 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--buttonBlue);
 }
 
 .card.home__actions > p {
   flex-grow: 1;
+  color: var(--buttonGreen);
 }
 
 .card.home__actions:focus,
