--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -12,7 +12,6 @@ img {
 
 ul, a {
   text-decoration: none;
-  color: initial;
   list-style: none;
 }
 
