--- a/src/styles/siteTitle.css
+++ b/src/styles/siteTitle.css
@@ -1,5 +1,6 @@
 .siteTitle {
   color: var(--textColorOne);
+  background: var(--backgroundLayerThree);
   position: relative;
   margin: 0;
   padding: 0;
@@ -9,10 +10,14 @@
   align-items: center;
   justify-content: center;
   border: none;
-  background:
+  /* background:
     linear-gradient(45deg, hsla(190, 95%, 43%, 1) 0%, hsla(190, 95%, 43%, 0) 70%),
     linear-gradient(135deg, hsla(219, 93%, 48%, 1) 10%, hsla(219, 93%, 48%, 0) 80%),
-    linear-gradient(315deg, #3bae37 100%, hsla(130, 96%, 45%, 0) 70%);
+    linear-gradient(315deg, #3bae37 100%, hsla(130, 96%, 45%, 0) 70%); */
+}
+
+.siteTitle:hover {
+  box-shadow: 2px 2px 10px var(--buttonGreen);
 }
 
 .siteTitle > h1 {
@@ -22,9 +27,9 @@
 .siteTitle > div.svg,
 .siteTitle > div > div > svg {
   position: absolute;
-  /* vertical align/perfectly center an absolute element: */
+  /* vertically center an absolute element: */
   top: 50%;
   transform: translateY(-50%);
-  left: 0;
+  left: 0.5rem;
   /* fill: var(--textColorThree); */
 }
